--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "handlebars-form-handler",
-  "version": "0.0.1",
+  "name": "hbs-form-handler",
+  "version": "0.0.2",
   "description": "Form handler for handlebars",
   "main": "webpack.config.js",
   "devDependencies": {
